# sctx

./: CMakeLists.txt  LICENSE  README.md  unixbuild.sh
include/sandbox/: sandbox.hpp
include/sctx/: sctx.hpp
src/: CMakeLists.txt  main.cpp
src/context/common/: context.hpp
src/context/opengl/: gl_buffer.cpp  gl_buffer.hpp  gl_context.cpp  gl_context.hpp  gl_program.cpp  gl_program.hpp  gl_sampler.cpp  gl_sampler.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_input.cpp  gl_vertex_input.hpp
src/gpu_context/: context.hpp
src/window/: gl_window.cpp  gl_window.hpp  window.hpp
